--- a/templates/hpa.yaml
+++ b/templates/hpa.yaml
@@ -1,5 +1,5 @@
 {{- if eq $.Values.kind "Deployment" }}
-apiVersion: autoscaling/v2beta1
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ $.Values.appName }}
